# sales-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: app.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: __init__.py  booking.py  chitchat.py  constants.py  intent.py  lead_capture.py  notification.py  rag.py
app/core/: config.py
app/db/: mongodb.py
app/routes/: chat.py
app/schemas/: chat.py
app/services/: calendar_service.py  email_service.py  vectorstore.py
app/utils/: ingest_pdf.py  llm.py
docker/: Dockerfile.api
tests/: test_chat.py  test_health.py  test_retrieval.py
