[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi[standard]>=0.139.0",
    "langgraph>=1.2.8",
    "motor>=3.7.1",
    "openai>=2.44.0",
    "pinecone>=9.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.2",
]
